lab1/Test/L1-A-10-5.output
Error Type B at Line 7
Error Type A at Line 15
Error Type B at Line 32
Error Type B at Line 34
Error Type B at Line 40
Error Type A at Line 66
Error Type B at Line 71
Error Type A at Line 74
