lab1/Test/L1-A-10-5.cmm
struct BWg VwXDxbn ( float SnrV ) {
}
int gjOUdtUoul7S_q8y [ 1525434377 ] 
;
struct {
};
struct != NYdYaiWbMg4L {
  int UboevAtfWCBK1JcV = X9SKu7StSU5rlal || ssDjmfRM 
    && KHx2mnbHaJK_nXXh / ! - - Un_d3wis ( lPOgtogSG62xLH_RWM 
    = aP1EJYZBp4B64wSW == Ro9DGq - - ( lAlGFOKthoSG8nfW0iFN 
    = JaQmX > j96aROVn1qJ7q_zXp + aQUdEq [ iF7ks = CRKrLt6yie 
    <= vo5pqkJN5UkFlo6Nn ( xWt , sEU , dAPtslW , j , rUA 
    < - fAz ( cy_uHjkvb0s_urCsWu__ = M5tNCXxbL - - ! vt8khSgAzX 
    ( ql && hbTwqxz3muB3 == - 1601383447 ) ) != 323046861.1294480746 
    ) >= - MM0kIUYC8PJZMJ ] ) ) * - ! #FwmoelnmYHhlaWH 
    ( ) . mCO7Hky ;
};
int ;
struct {
};
int ;
int ;
int ;
int ;
int TfbGCWc7LOzx ( ) {
}
int yAG4NNS5lrpsiijBCRD ( ) {
  FFniNIS1UP5ETWdElDwQ ;
  MHfBk5eGb ;
  while ( PWYpPzOYfjwGAsBRLxBS ) {
    lzrDuaNTk ;
    if ( float e3s3XQgmki6_QXdXv )     OY2cki3TdNSVpVOA1cfO 
      ;
else     if ( PGT9HtUqps34 )     d_ == ;
else     if ( NWe )     if ( NQT ) {
      CL54vnoWf ;
      if ( E5k4B2KTvO ) {
        int l5mqd9x2PaKyxjhZuG ;
        int YKx2T0wz_P7rj5r3C7rq , nCNC8f ;
+         while ( j0jyTl_Cb )         while ( rxkv3HwuqRJdHXUz 
          )         K8Sa64q1nKCQMa2Ir ;


{
          if ( c )           if ( o )           vDPxOcpDdBAS8Cu 
            ;


        }        amkKtxKPZWmTiIfw ;
        if ( DC )         KEfkva2tZgJ ;
else         if ( yaYCZ4FFJup8VWjixNAK )         if 
          ( ekfVb_uRPgAP )         XPip78 ;



      }
    }else     quA9HJZnZKXl ;




  }
  if ( y4_D )   return r0FhuG ;

}
int KtzHuBK ( int sD06ASCfG , int reD5wC2cZ $) {
}
int ;
int ;
int ;
int else ASWKF , INdh 

;
`